Removed padding from input, fixes bad placeholder placement on IE and Safari

--- a/src/app/component/search-bar/search-bar.component.scss
+++ b/src/app/component/search-bar/search-bar.component.scss
@@ -23,8 +23,7 @@
 }
 
 .has-search .form-control {
-    padding-left: 0.375rem;
-    padding: 25px;
+    padding-left: 25px;
     font-size: 25px;
   }
   
